# Tarea_5

./: Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  CentroElectoralSubject.cpp  CentroElectoralSubject.h  CrearHash.h  MesaElectoral.cpp  MesaElectoral.h  MesaElectoralObserver.h  README.md  Voto.cpp  Voto.h  main.cpp
